--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ rsconnect/
 
 # Real world test cases (confidential as it features PII)
 real_examples/
+
+# Notes and code examples for AI agents
+agents/
